--- a/.github/workflows/Linux.yml
+++ b/.github/workflows/Linux.yml
@@ -134,23 +134,15 @@ jobs:
         echo REF: ${{ github.ref }}
         ls -lahR ${{ github.workspace }}/build/
 
+    # Linux release artifacts are uploaded in Docker.yml
+    # That builds binaries based on CentOS 7, which makes those more portable.
+    # However, these binaries are uploaded to be available in GH's 'Actions', just in case.
     - name: Upload the artifacts
-      if:  ${{ matrix.os == 'ubuntu-18.04' && matrix.compiler == 'GCC' && matrix.odbc_provider == 'UnixODBC' && matrix.build_type == 'Release' && matrix.runtime_link == 'dynamic-runtime' && matrix.third_parties == 'bundled-third-parties' }}
+      if:  ${{ matrix.compiler == 'GCC' && matrix.odbc_provider == 'UnixODBC' && matrix.build_type == 'Release' && matrix.runtime_link == 'dynamic-runtime' && matrix.third_parties == 'bundled-third-parties' }}
       uses: actions/upload-artifact@v3
       with:
-          name: clickhouse-odbc-linux
+          name: clickhouse-odbc-linux-${{ matrix.compiler }}-${{ matrix.odbc_provider }}-${{ matrix.build_type }}
           path: ${{ github.workspace }}/build/clickhouse-odbc-*
-
-    - name: Upload artifacts as release assets
-      #if: github.event_name == 'release'
-      if: ${{ matrix.build_type == 'Release' }}
-      uses: svenstaro/upload-release-action@v2
-      with:
-        repo_token: ${{ secrets.GITHUB_TOKEN }}
-        file: ${{ github.workspace }}/build/clickhouse-odbc-*
-        overwrite: true
-        tag: ${{ github.ref }}
-        file_glob: true
 
     # Temporarily disable tests to speed up debugging of depending workflow
     # - name: Test - Run unit tests
