--- a/.github/workflows/Windows.yml
+++ b/.github/workflows/Windows.yml
@@ -95,15 +95,14 @@ jobs:
         dir ${{ github.workspace }}/build
 
     - name: Upload the artifacts
-      if:  ${{ matrix.os == 'windows-2019' && matrix.build_type == 'Release' }}
+      # if:  ${{ matrix.os == 'windows-2019' && matrix.build_type == 'Release' }}
       uses: actions/upload-artifact@v3
       with:
-          name: clickhouse-odbc-windows
+          name: clickhouse-odbc-windows-${{ matrix.architecture }}-${{ matrix.build_type }}
           path: ${{ github.workspace }}/build/clickhouse-odbc-*
 
     - name: Upload artifacts as release assets
-      #if: github.event_name == 'release'
-      if: ${{ matrix.build_type == 'Release' }}
+      if: ${{ github.event_name == 'release' && matrix.build_type == 'Release' }}
       uses: svenstaro/upload-release-action@v2
       with:
         repo_token: ${{ secrets.GITHUB_TOKEN }}
