--- a/.github/workflows/Docker.yml
+++ b/.github/workflows/Docker.yml
@@ -33,8 +33,8 @@ jobs:
           - unixodbc
 #          - iodbc
         base_os:
-          - centos
-#          - ubuntu
+#          - centos
+          - ubuntu
 
     runs-on: ubuntu-22.04
 
