--- a/contrib/CMakeLists.txt
+++ b/contrib/CMakeLists.txt
@@ -6,6 +6,8 @@ else ()
 endif ()
 unset (_current_dir_name)
 
+set_property(DIRECTORY PROPERTY EXCLUDE_FROM_ALL 1)
+
 if (CH_ODBC_ENABLE_SSL AND NOT MSVC)
     if (CH_ODBC_PREFER_BUNDLED_SSL OR NOT OPENSSL_FOUND)
         if (NOT OPENSSL_FOUND AND NOT CH_ODBC_PREFER_BUNDLED_SSL)
@@ -89,6 +91,36 @@ if (MSVC)
         set_property(TARGET Poco::Foundation APPEND PROPERTY INTERFACE_LINK_LIBRARIES Iphlpapi)
     endif ()
 endif ()
+
+# add_contrib cmake_folder[ base_folder1[, ...base_folderN]]
+function(add_contrib cmake_folder)
+    if (ARGN)
+        set(base_folders ${ARGN})
+    else()
+        set(base_folders ${cmake_folder})
+    endif()
+
+    foreach (base_folder ${base_folders})
+        # some typos in the code
+        if (NOT IS_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/${base_folder}")
+            message(FATAL_ERROR "No such base folder '${base_folder}' (for '${cmake_folder}' cmake folder). Typo in the base folder name?")
+        endif()
+
+        file(GLOB contrib_files "${base_folder}/*")
+        if (NOT contrib_files)
+            # Checking out *all* submodules takes > 5 min. Therefore, the smoke build ("FastTest") in CI initializes only the set of
+            # submodules minimally needed for a build and we cannot assume here that all submodules are populated.
+            message(STATUS "submodule ${base_folder} is missing or empty. to fix try run:")
+            message(STATUS "    git submodule update --init")
+            return()
+        endif()
+    endforeach()
+
+    message(STATUS "Adding contrib module ${base_folders} (configuring with ${cmake_folder})")
+    add_subdirectory (${cmake_folder})
+endfunction()
+
+add_contrib (icu-cmake icu)
 
 # if (CH_ODBC_PREFER_BUNDLED_FOLLY OR NOT Folly_FOUND)
 #     if (NOT Folly_FOUND AND NOT CH_ODBC_PREFER_BUNDLED_FOLLY)
