--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -82,7 +82,7 @@ include (GNUInstallDirs)
 add_library(global-group INTERFACE)
 if (ARCH_LINUX)
     include(cmake/linux/default_libs.cmake)
-    #target_link_options(global-group INTERFACE "LINKER:--no-undefined")
+    target_link_options(global-group INTERFACE "LINKER:--no-undefined")
 else()
     link_libraries(global-group)
 endif()
