--- a/.github/workflows/Linux.yml
+++ b/.github/workflows/Linux.yml
@@ -31,7 +31,7 @@ jobs:
       matrix:
         os: [ubuntu-22.04]
         odbc_provider: [UnixODBC, iODBC]
-        compiler: [Clang, GCC]
+        compiler: [Clang]
         build_type: [Debug, Release]
         architecture: [x86_64]
         runtime_link: [static-runtime, dynamic-runtime]
