--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -83,6 +83,8 @@ add_library(global-group INTERFACE)
 if (OS_LINUX)
     include(cmake/linux/default_libs.cmake)
     target_link_options(global-group INTERFACE "LINKER:--no-undefined")
+elseif(OS_DARWIN)
+    include(cmake/darwin/default_libs.cmake)
 else()
     link_libraries(global-group)
 endif()
