--- a/contrib/openssl-cmake/CMakeLists.txt
+++ b/contrib/openssl-cmake/CMakeLists.txt
@@ -43,36 +43,34 @@ else()
     target_compile_options(global-group INTERFACE "-Wno-poison-system-directories")
 endif()
 
-set(PLATFORM_DIRECTORY linux_x86_64)
-add_definitions(-DAES_ASM -DBSAES_ASM -DCMLL_ASM -DECP_NISTZ256_ASM -DGHASH_ASM -DKECCAK1600_ASM -DMD5_ASM -DOPENSSL_BN_ASM_GF2m -DOPENSSL_BN_ASM_MONT -DOPENSSL_BN_ASM_MONT5 -DOPENSSL_CPUID_OBJ -DOPENSSL_IA32_SSE2 -DPOLY1305_ASM -DRC4_ASM -DSHA1_ASM -DSHA256_ASM -DSHA512_ASM -DVPAES_ASM -DWHIRLPOOL_ASM -DX25519_ASM -DL_ENDIAN)
 
-#if(ARCH_AMD64)
-#    if(OS_DARWIN)
-#        set(PLATFORM_DIRECTORY darwin_x86_64)
-#        add_definitions(-DL_ENDIAN)
-#    else()
-#    endif()
-#elseif(ARCH_AARCH64)
-#    if(OS_DARWIN)
-#        set(PLATFORM_DIRECTORY darwin_aarch64)
-#        add_definitions(-DL_ENDIAN)
-#    else()
-#        set(PLATFORM_DIRECTORY linux_aarch64)
-#        add_definitions(-DBSAES_ASM -DECP_NISTZ256_ASM -DECP_SM2P256_ASM -DKECCAK1600_ASM -DMD5_ASM -DOPENSSL_BN_ASM_MONT -DOPENSSL_CPUID_OBJ -DOPENSSL_SM3_ASM -DPOLY1305_ASM -DSHA1_ASM -DSHA256_ASM -DSHA512_ASM -DSM4_ASM -DVPAES_ASM -DVPSM4_ASM -DL_ENDIAN)
-#    endif()
-#elseif(ARCH_PPC64LE)
-#    set(PLATFORM_DIRECTORY linux_ppc64le)
-#    add_definitions(-DOPENSSL_CPUID_OBJ -DL_ENDIAN)
-#elseif(ARCH_S390X)
-#    set(PLATFORM_DIRECTORY linux_s390x)
-#    add_definitions(-DAES_CTR_ASM -DOPENSSL_CPUID_OBJ -DB_ENDIAN)
-#elseif(ARCH_RISCV64)
-#    set(PLATFORM_DIRECTORY linux_riscv64)
-#    add_definitions(-DOPENSSL_CPUID_OBJ -DL_ENDIAN)
-#elseif(ARCH_LOONGARCH64)
-#    set(PLATFORM_DIRECTORY linux_loongarch64)
-#    add_definitions(-DOPENSSL_CPUID_OBJ -DL_ENDIAN)
-#endif()
+if(ARCH_AMD64)
+    if(OS_DARWIN)
+        set(PLATFORM_DIRECTORY darwin_x86_64)
+        add_definitions(-DL_ENDIAN)
+    else()
+    endif()
+elseif(ARCH_AARCH64)
+    if(OS_DARWIN)
+        set(PLATFORM_DIRECTORY darwin_aarch64)
+        add_definitions(-DL_ENDIAN)
+    else()
+        set(PLATFORM_DIRECTORY linux_aarch64)
+        add_definitions(-DBSAES_ASM -DECP_NISTZ256_ASM -DECP_SM2P256_ASM -DKECCAK1600_ASM -DMD5_ASM -DOPENSSL_BN_ASM_MONT -DOPENSSL_CPUID_OBJ -DOPENSSL_SM3_ASM -DPOLY1305_ASM -DSHA1_ASM -DSHA256_ASM -DSHA512_ASM -DSM4_ASM -DVPAES_ASM -DVPSM4_ASM -DL_ENDIAN)
+    endif()
+elseif(ARCH_PPC64LE)
+    set(PLATFORM_DIRECTORY linux_ppc64le)
+    add_definitions(-DOPENSSL_CPUID_OBJ -DL_ENDIAN)
+elseif(ARCH_S390X)
+    set(PLATFORM_DIRECTORY linux_s390x)
+    add_definitions(-DAES_CTR_ASM -DOPENSSL_CPUID_OBJ -DB_ENDIAN)
+elseif(ARCH_RISCV64)
+    set(PLATFORM_DIRECTORY linux_riscv64)
+    add_definitions(-DOPENSSL_CPUID_OBJ -DL_ENDIAN)
+elseif(ARCH_LOONGARCH64)
+    set(PLATFORM_DIRECTORY linux_loongarch64)
+    add_definitions(-DOPENSSL_CPUID_OBJ -DL_ENDIAN)
+endif()
 
 file(STRINGS "${PLATFORM_DIRECTORY}/include/openssl/opensslv.h" OPENSSL_VERSION_STR
     REGEX "^#[\t ]*define[\t ]+OPENSSL_VERSION_STR[\t ]+\"([0-9])+\\.([0-9])+\\.([0-9])+\".*")
