Support darwin arm64

--- a/contrib/icu-cmake/CMakeLists.txt
+++ b/contrib/icu-cmake/CMakeLists.txt
@@ -465,7 +465,11 @@ else()
     if (OS_LINUX)
         set(ICUDATA_SOURCE_FILE "${ICUDATA_SOURCE_DIR}/icudt75l_dat.S" )
     elseif (OS_DARWIN)
-        set(ICUDATA_SOURCE_FILE "${ICUDATA_SOURCE_DIR}/darwin_x86_64/icudt75l_dat.S" )
+        if (ARCH_AARCH64)
+            set(ICUDATA_SOURCE_FILE "${ICUDATA_SOURCE_DIR}/darwin_arm64/icudt75l_dat.S" )
+        elseif (ARCH_AMD64)
+            set(ICUDATA_SOURCE_FILE "${ICUDATA_SOURCE_DIR}/darwin_x86_64/icudt75l_dat.S" )
+        endif()
     endif()
 endif()
 
