--- a/.github/workflows/macOS.yml
+++ b/.github/workflows/macOS.yml
@@ -29,7 +29,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [macos-11]
+        os: [macos-latest]
         odbc_provider: [UnixODBC, iODBC]
         # Once folly supports new clang (libcpp) add Clang to compilers:
         compiler: [AppleClang, GCC]
