--- a/.github/workflows/macOS.yml
+++ b/.github/workflows/macOS.yml
@@ -61,23 +61,14 @@ jobs:
         brew update
         brew remove -f --ignore-dependencies -q libiodbc unixodbc freetds php node composer
         brew upgrade
-        brew install git cmake perl python openssl poco icu4c binutils
+        brew install git cmake perl python openssl poco icu4c binutils curl
         pip3 install --break-system-packages --user 'testflows==1.6.56'
-
-    # - name: Install dependencies - Docker
-    #   run: |
-    #     brew install --cask docker
-    #     open /Applications/Docker.app
 
     - name: Install dependencies - UnixODBC
       if: ${{ matrix.odbc_provider == 'UnixODBC' }}
       run: |
         brew install unixodbc
         pip3 install --break-system-packages --user pyodbc
-
-    - name: Install dependencies - iODBC
-      if: ${{ matrix.odbc_provider == 'iODBC' }}
-      run: brew install libiodbc
 
     # Right now folly fails to compile and link against brew's clang & libcpp versions 11-14
     # Since Clang is removed from list of compilers in matrix, this will not be executed.
@@ -90,6 +81,12 @@ jobs:
       run: |
         brew install gcc gdb
         export COMPILER_PATH=$(brew prefix gcc)/bin
+
+    - name: Start ClickHouse server in background
+      run: |
+        curl https://clickhouse.com | bash
+        ./clickhouse install
+        ./clickhouse start
 
     - name: Configure
       run: >
@@ -126,88 +123,73 @@ jobs:
       working-directory: ${{ github.workspace }}/build
       run: ctest --output-on-failure --build-config ${{ matrix.build_type }} -R '.*-ut.*'
 
-    # - name: Test - Start ClickHouse server in background
-    #   run: |
-    #     docker pull ${CLICKHOUSE_SERVER_IMAGE}
-    #     docker run -d --name clickhouse ${CLICKHOUSE_SERVER_IMAGE}
-    #     docker ps -a
-    #     docker stats -a --no-stream
+    - name: Test - Run integration tests
+      working-directory: ${{ github.workspace }}/build
+      run: |
+        export CLICKHOUSE_SERVER_IP=127.0.0.1
 
-    # - name: Test - Run integration tests
-    #   working-directory: ${{ github.workspace }}/build
-    #   run: |
-    #     export CLICKHOUSE_SERVER_IP=$(docker inspect -f '{{ .NetworkSettings.IPAddress }}' clickhouse)
+        export ODBCSYSINI=${{ github.workspace }}/run
+        export ODBCINSTINI=.odbcinst.ini
+        export ODBCINI=$ODBCSYSINI/.odbc.ini
 
-    #     export ODBCSYSINI=${{ github.workspace }}/run
-    #     export ODBCINSTINI=.odbcinst.ini
-    #     export ODBCINI=$ODBCSYSINI/.odbc.ini
-    #     if [[ "${{ matrix.odbc_provider }}" == "iODBC" ]]; then
-    #         # Full path to a custom odbcinst.ini in ODBCINSTINI for iODBC.
-    #         export ODBCINSTINI=$ODBCSYSINI/$ODBCINSTINI
-    #     fi
+        cat > $ODBCSYSINI/.odbcinst.ini <<-EOF
+        [ODBC]
+        Trace     = 1
+        TraceFile = ${{ github.workspace }}/run/odbc-driver-manager-trace.log
+        Debug     = 1
+        DebugFile = ${{ github.workspace }}/run/odbc-driver-manager-debug.log
 
-    #     cat > $ODBCSYSINI/.odbcinst.ini <<-EOF
-    #     [ODBC]
-    #     Trace     = 1
-    #     TraceFile = ${{ github.workspace }}/run/odbc-driver-manager-trace.log
-    #     Debug     = 1
-    #     DebugFile = ${{ github.workspace }}/run/odbc-driver-manager-debug.log
+        [ODBC Drivers]
+        ClickHouse ODBC Driver (ANSI)    = Installed
+        ClickHouse ODBC Driver (Unicode) = Installed
 
-    #     [ODBC Drivers]
-    #     ClickHouse ODBC Driver (ANSI)    = Installed
-    #     ClickHouse ODBC Driver (Unicode) = Installed
+        [ClickHouse ODBC Driver (ANSI)]
+        Driver     = ${{ github.workspace }}/build/driver/libclickhouseodbc.dylib
+        Setup      = ${{ github.workspace }}/build/driver/libclickhouseodbc.dylib
+        UsageCount = 1
 
-    #     [ClickHouse ODBC Driver (ANSI)]
-    #     Driver     = ${{ github.workspace }}/build/driver/libclickhouseodbc.so
-    #     Setup      = ${{ github.workspace }}/build/driver/libclickhouseodbc.so
-    #     UsageCount = 1
+        [ClickHouse ODBC Driver (Unicode)]
+        Driver     = ${{ github.workspace }}/build/driver/libclickhouseodbcw.dylib
+        Setup      = ${{ github.workspace }}/build/driver/libclickhouseodbcw.dylib
+        UsageCount = 1
+        EOF
 
-    #     [ClickHouse ODBC Driver (Unicode)]
-    #     Driver     = ${{ github.workspace }}/build/driver/libclickhouseodbcw.so
-    #     Setup      = ${{ github.workspace }}/build/driver/libclickhouseodbcw.so
-    #     UsageCount = 1
-    #     EOF
+        cat > $ODBCSYSINI/.odbc.ini <<-EOF
+        [ODBC]
+        Trace     = 1
+        TraceFile = ${{ github.workspace }}/run/odbc-driver-manager-trace.log
+        Debug     = 1
+        DebugFile = ${{ github.workspace }}/run/odbc-driver-manager-debug.log
 
-    #     cat > $ODBCSYSINI/.odbc.ini <<-EOF
-    #     [ODBC]
-    #     Trace     = 1
-    #     TraceFile = ${{ github.workspace }}/run/odbc-driver-manager-trace.log
-    #     Debug     = 1
-    #     DebugFile = ${{ github.workspace }}/run/odbc-driver-manager-debug.log
+        [ODBC Data Sources]
+        ClickHouse DSN (ANSI)         = ClickHouse ODBC Driver (ANSI)
+        ClickHouse DSN (Unicode)      = ClickHouse ODBC Driver (Unicode)
+        ClickHouse DSN (ANSI, RBWNAT) = ClickHouse ODBC Driver (ANSI)
 
-    #     [ODBC Data Sources]
-    #     ClickHouse DSN (ANSI)         = ClickHouse ODBC Driver (ANSI)
-    #     ClickHouse DSN (Unicode)      = ClickHouse ODBC Driver (Unicode)
-    #     ClickHouse DSN (ANSI, RBWNAT) = ClickHouse ODBC Driver (ANSI)
+        [ClickHouse DSN (ANSI)]
+        Driver        = ClickHouse ODBC Driver (ANSI)
+        Description   = Test DSN for ClickHouse ODBC Driver (ANSI)
+        Url           = http://${CLICKHOUSE_SERVER_IP}
+        DriverLog     = yes
+        DriverLogFile = ${{ github.workspace }}/run/clickhouse-odbc-driver.log
 
-    #     [ClickHouse DSN (ANSI)]
-    #     Driver        = ClickHouse ODBC Driver (ANSI)
-    #     Description   = Test DSN for ClickHouse ODBC Driver (ANSI)
-    #     Url           = http://${CLICKHOUSE_SERVER_IP}
-    #     DriverLog     = yes
-    #     DriverLogFile = ${{ github.workspace }}/run/clickhouse-odbc-driver.log
+        [ClickHouse DSN (Unicode)]
+        Driver        = ClickHouse ODBC Driver (Unicode)
+        Description   = Test DSN for ClickHouse ODBC Driver (Unicode)
+        Url           = http://${CLICKHOUSE_SERVER_IP}
+        DriverLog     = yes
+        DriverLogFile = ${{ github.workspace }}/run/clickhouse-odbc-driver-w.log
 
-    #     [ClickHouse DSN (Unicode)]
-    #     Driver        = ClickHouse ODBC Driver (Unicode)
-    #     Description   = Test DSN for ClickHouse ODBC Driver (Unicode)
-    #     Url           = http://${CLICKHOUSE_SERVER_IP}
-    #     DriverLog     = yes
-    #     DriverLogFile = ${{ github.workspace }}/run/clickhouse-odbc-driver-w.log
+        [ClickHouse DSN (ANSI, RBWNAT)]
+        Driver        = ClickHouse ODBC Driver (ANSI)
+        Description   = Test DSN for ClickHouse ODBC Driver (ANSI) that uses RowBinaryWithNamesAndTypes as data source communication default format
+        Url           = http://${CLICKHOUSE_SERVER_IP}/query?default_format=RowBinaryWithNamesAndTypes
+        DriverLog     = yes
+        DriverLogFile = ${{ github.workspace }}/run/clickhouse-odbc-driver.log
+        EOF
 
-    #     [ClickHouse DSN (ANSI, RBWNAT)]
-    #     Driver        = ClickHouse ODBC Driver (ANSI)
-    #     Description   = Test DSN for ClickHouse ODBC Driver (ANSI) that uses RowBinaryWithNamesAndTypes as data source communication default format
-    #     Url           = http://${CLICKHOUSE_SERVER_IP}/query?default_format=RowBinaryWithNamesAndTypes
-    #     DriverLog     = yes
-    #     DriverLogFile = ${{ github.workspace }}/run/clickhouse-odbc-driver.log
-    #     EOF
-
-    #     if [[ "${{ matrix.odbc_provider }}" == "iODBC" ]]; then
-    #         export GTEST_FILTER="-PerformanceTest.*"
-    #     fi
-
-    #     # Run all tests except those that were run in "Test - unit tests" step.
-    #     ctest --output-on-failure --build-config ${{ matrix.build_type }} -E '.*-ut.*'
+        # Run all tests except those that were run in "Test - unit tests" step.
+        ctest --output-on-failure --build-config ${{ matrix.build_type }} -E '.*-ut.*'
 
     - name: Upload artifacts as release assets
       if: ${{ github.event_name == 'release' && matrix.build_type == 'Release' }}
