--- a/.github/workflows/Linux.yml
+++ b/.github/workflows/Linux.yml
@@ -15,9 +15,6 @@ concurrency:
   group: linux-${{ github.head_ref }}
   cancel-in-progress: true
 
-env:
-  CLICKHOUSE_SERVER_IMAGE: "clickhouse/clickhouse-server:21.3"
-
 defaults:
   run:
     shell: bash
@@ -130,7 +127,7 @@ jobs:
     - name: Prepare env source
       run: |
         cat > ${{ github.workspace }}/.envrc <<-EOF
-        export ODBCSYSINI=${{ github.workspace }}/run
+        export ODBCSYSINI=~
         export ODBCINSTINI=.odbcinst.ini
         export ODBCINI=$ODBCSYSINI/.odbc.ini
         if [[ "${{ matrix.odbc_provider }}" == "iODBC" ]]; then
@@ -207,6 +204,7 @@ jobs:
     - name: Test - run Python e2e tests
       working-directory: source/test
       run: |
+        env
         source ${{ github.workspace }}/.envrc
         pytest
 
