--- a/test/pytest.ini
+++ b/test/pytest.ini
@@ -1,7 +1,7 @@
 [pytest]
 minversion = 8.0
-addopts = -v
 testpaths =
     src
 filterwarnings =
     ignore:There is no current event loop
+log_cli=true
